Use new links for videos + small fixes
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/nn/gradient-descent.tex
+++ b/shared/latex/nn/gradient-descent.tex
@@ -18,6 +18,10 @@
   \end{columns}
 \end{frame}
 
+\begin{frame}{Illustration}
+  \bluelink{https://youtu.be/gK2dIZCbLZ0}{Illustration de la descente de gradient.}
+\end{frame}
+
 \begin{frame}{Algorithme}
   \begin{enumerate}[<+->]
     \item Initialisation aléatoire des paramètres $\theta_i$ du modèle $f_{\theta}, i\in[1..k]$
@@ -73,93 +77,4 @@
       où $0 < \gamma < 1$ (pas d'apprentissage)
     \end{center}
   \end{minipage}\hfill
-\end{frame}
-
-\begin{frame}{Exemple}
-  Initialisation au hasard ($\gamma = 0.01$)
-  \begin{itemize}
-    \item $\theta_0 = 0.25$ (vrai $\theta_0 = 0.5$)
-    \item $\theta_1 = 0.58$ (vrai $\theta_1 = 3.0$)
-  \end{itemize}
-  \V{["img/regression-1", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Exemple}
-  \begin{itemize}
-    \item $\theta_0 = 0.25$ (vrai $\theta_0 = 0.5$)
-    \item $\theta_1 = 0.58$ (vrai $\theta_1 = 3.0$)
-  \end{itemize}
-  \V{["img/regression-error", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Exemple}
-  \begin{itemize}
-    \item $\theta_0 = 0.35$ (vrai $\theta_0 = 0.5$)
-    \item $\theta_1 = 1.50$ (vrai $\theta_1 = 3.0$)
-  \end{itemize}
-  \V{["img/regression-2", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Exemple}
-  \begin{itemize}
-    \item $\theta_0 = 0.40$ (vrai $\theta_0 = 0.5$)
-    \item $\theta_1 = 2.10$ (vrai $\theta_1 = 3.0$)
-  \end{itemize}
-  \V{["img/regression-3", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Exemple}
-  \begin{itemize}
-    \item $\theta_0 = 0.43$ (vrai $\theta_0 = 0.5$)
-    \item $\theta_1 = 2.48$ (vrai $\theta_1 = 3.0$)
-  \end{itemize}
-  \V{["img/regression-4", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Exemple}
-  \begin{itemize}
-    \item $\theta_0 = 0.46$ (vrai $\theta_0 = 0.5$)
-    \item $\theta_1 = 2.73$ (vrai $\theta_1 = 3.0$)
-  \end{itemize}
-  \V{["img/regression-5", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Exemple}
-  \begin{itemize}
-    \item $\theta_0 = 0.47$ (vrai $\theta_0 = 0.5$)
-    \item $\theta_1 = 2.89$ (vrai $\theta_1 = 3.0$)
-  \end{itemize}
-  \V{["img/regression-6", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Exemple}
-  \begin{itemize}
-    \item $\theta_0 = 0.48$ (vrai $\theta_0 = 0.5$)
-    \item $\theta_1 = 2.99$ (vrai $\theta_1 = 3.0$)
-  \end{itemize}
-  \V{["img/regression-7", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Exemple}
-  \begin{itemize}
-    \item $\theta_0 = 0.49$ (vrai $\theta_0 = 0.5$)
-    \item $\theta_1 = 3.06$ (vrai $\theta_1 = 3.0$)
-  \end{itemize}
-  \V{["img/regression-8", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Exemple}
-  \begin{itemize}
-    \item $\theta_0 = 0.49$ (vrai $\theta_0 = 0.5$)
-    \item $\theta_1 = 3.10$ (vrai $\theta_1 = 3.0$)
-  \end{itemize}
-  \V{["img/regression-9", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Exemple}
-  \begin{itemize}
-    \item $\theta_0 = 0.50$ (vrai $\theta_0 = 0.5$)
-    \item $\theta_1 = 3.13$ (vrai $\theta_1 = 3.0$)
-  \end{itemize}
-  \V{["img/regression-10", "th", 0.6] | image}
 \end{frame}
