--- a/shared/latex/unsupervised/dimensionality-reduction/pca-lda.tex
+++ b/shared/latex/unsupervised/dimensionality-reduction/pca-lda.tex
@@ -1,29 +1,29 @@
 \begin{frame}{Projections linéaires}
   Deux méthodes principales~:
   \begin{itemize}
-    \item Principal Component Analysis (Non-supervisée)
-    \item Linear Discriminant Analysis (Supervisée)
+    \item Analyse en composantes principales (ACP, \textit{PCA} en anglais, non-supervisée)
+    \item Analyse discriminante linéaire (ADL, \textit{LDA} en anglais, supervisée)
   \end{itemize}
 \end{frame}
 
-\begin{frame}{PCA --- Caractéristiques}
-  \begin{itemize}[<+->]
-    \item Crée de nouvelles features (combinaisons linéaires des originales)
-    \item Ces features sont décorrélées
+\begin{frame}{ACP --- Caractéristiques}
+  \begin{itemize}
+    \item Crée de nouvelles colonnes (combinaisons linéaires des originales)
+    \item Ces colonnes sont décorrélées
     \item Les premières sont les plus informatives
     \item Pour réduire la dimensionnalité~: ne conserver que les $k$ premières
   \end{itemize}
 \end{frame}
 
-\begin{frame}{PCA --- Exemple 1}
+\begin{frame}{ACP --- Exemple 1}
   \V{["img/pca-nuage", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}{PCA --- Exemple 2}
+\begin{frame}{ACP --- Exemple 2}
   \V{["img/pca-fish", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}{PCA --- Point de départ}
+\begin{frame}{ACP --- Point de départ}
   \[
   X = \begin{bmatrix}
     X_{1,1} & \dots  & X_{1,D} \\
@@ -33,8 +33,8 @@
   \]
 \end{frame}
 
-\begin{frame}{PCA --- Procédé}
-  Chaque dimension est centrée:
+\begin{frame}{ACP --- Procédé}
+  Chaque colonne est centrée~:
   \[
   \overline{X} =
   \begin{bmatrix}
@@ -56,33 +56,36 @@
   \]
 \end{frame}
 
-\begin{frame}{PCA --- Procédé (suite)}
-  \begin{itemize}[<+->]
+\begin{frame}{ACP --- Procédé (suite)}
+  \begin{itemize}
     \item Calcul de la matrice de covariance (resp corrélation)~:
       \[
       \frac{1}{N} \times \overline{X^T} \times \overline{X}
       \quad
       ( \frac{1}{N} \times \widetilde{X^T} \times \widetilde{X} )
       \]
-    \item Calcul des vecteurs propres de cette matrice~: ce sont les combinaisons linéaires des nouvelles features
+    \item Calcul des vecteurs propres de cette matrice~: ce sont les combinaisons linéaires des nouvelles colonnes
     \item Tri des vecteurs par valeur propre décroissante
     \item Réduction de dimension : on ne conserve que les $k$ premiers vecteurs propres
   \end{itemize}
-  \bluelink{https://www.youtube.com/watch?v=FLbb_lyMWAY}{Illustration PCA}
+
+  \bluelink{https://youtu.be/VrNw9TTVExY}{Illustration de l'ACP}
 \end{frame}
 
-\begin{frame}{LDA --- Linear Discriminant Analysis}
-  Procédé : \\
+\begin{frame}{ADL --- Analyse discriminante linéaire}
+  Procédé~:
+
   \begin{itemize}
     \item Estimation de la matrice de covariance de chaque classe
     \item ACP sur chacune de ces matrices
     \item Projection en maximisant la variance inter-classes
   \end{itemize}
-  \bluelink{https://www.youtube.com/watch?v=mRPFN1IGnDY}{Illustration LDA}
+  \bluelink{https://youtu.be/sYrBSNp3jZc}{Illustration de l'ADL}
 \end{frame}
 
-\begin{frame}{LDA --- Linear Discriminant Analysis}
-  Attention, technique délicate qui est sensible à : \\
+\begin{frame}{ADL --- Analyse discriminante linéaire}
+  Attention, technique délicate qui est sensible à~:
+
   \begin{itemize}
     \item Forte dimensionnalité
     \item Distribution multimodale
