--- a/shared/latex/en/python/production/demo-environment.tex
+++ b/shared/latex/en/python/production/demo-environment.tex
@@ -1,9 +1,9 @@
-\begin{frame}{Démonstration}
-  Les différents systèmes vus pendant la démonstration sont~:
+\begin{frame}{Demonstration}
+  The different elements shown during the demonstration are~:
   \begin{itemize}
-    \item \bluelink{https://pip.pypa.io/en/stable/cli/pip_install/}{\texttt{pip install -r requirements.txt}} et \bluelink{https://pip.pypa.io/en/stable/cli/pip_freeze/}{\texttt{pip freeze}} pour geler les versions
-    \item \bluelink{https://docs.python.org/fr/3/library/venv.html}{\texttt{venv}} et \bluelink{https://virtualenv.pypa.io/en/latest/}{\texttt{virtualenv}}, deux systèmes d'environnements virtuels
-    \item \bluelink{https://virtualenvwrapper.readthedocs.io/en/latest/}{\texttt{virtualenvwrapper}}, un ensemble de scripts qui facilite la gestion des environnements virtuels
-    \item \bluelink{https://python-poetry.org/}{\texttt{poetry}}, l'outil que je recommande pour gérer les environnements en Python
+    \item \bluelink{https://pip.pypa.io/en/stable/cli/pip_install/}{\texttt{pip install -r requirements.txt}}
+    \item \bluelink{https://pip.pypa.io/en/stable/cli/pip_freeze/}{\texttt{pip freeze}}
+    \item \bluelink{https://docs.python.org/3/library/venv.html}{\texttt{venv}}
+    \item \bluelink{https://python-poetry.org/}{\texttt{poetry}}
   \end{itemize}
 \end{frame}
