--- a/shared/latex/en/python/production/tp-cli-stegano.tex
+++ b/shared/latex/en/python/production/tp-cli-stegano.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Travaux pratiques}
+\begin{frame}{Practical exercises}
   \bluelink{https://colab.research.google.com/drive/1ConZDebzVIbt3sUh4N5pzi9qciUqYKVk\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
