Traduction regressions lineaires

--- a/shared/latex/en/nn/gradient-descent.tex
+++ b/shared/latex/en/nn/gradient-descent.tex
@@ -4,48 +4,60 @@
     \begin{column}{0.5\textwidth}
       Compute the error gradient \emph{w.r.t.} the parameters:
       \[
-      \frac{\partial{E}}{\partial{w_i}}
+      \frac{\partial{E}}{\partial{\theta_i}}
       \]
       Update:
       \[
-      w_i \leftarrow w_i - \gamma\frac{\partial{E}}{\partial{w_i}}
+        \theta_i \leftarrow \theta_i - \gamma\frac{\partial{E}}{\partial{\theta_i}}
       \]
       where $0 < \gamma < 1$ (learning rate)
     \end{column}
     \begin{column}{0.5\textwidth}
-      \V{["plt/gradient-descent-en", "tw", 1] | image}
+      \V{["plt/linear-regression-error-surface", "tw", 1] | image}
     \end{column}
   \end{columns}
 \end{frame}
 
+\begin{frame}{Visualization}
+  \bluelink{https://youtu.be/gK2dIZCbLZ0}{Gradient descent visualization}
+\end{frame}
+
 \begin{frame}{Algorithm}
   \begin{enumerate}[<+->]
-    \item Random initialization of the model
-    \item While no stopping criterion is satisfied:
+    \item Parameters $\theta_i$ random initialization for the model $f_{\theta}, i\in[1..k]$
+    \item For $n$ epochs:
       \begin{itemize}
-        \item Selection of a random \textbf{batch} of samples
-        \item \textbf{Forward}: Model output computation on the selected batch
-        \item Computation of the error (loss) compared to the expected output
-        \item \textbf{Backward}: Error gradient retropropagation (model update)
-        \item Stopping criteria computation
+        \item Sampling $m$ data in $b$ \textbf{batchs}
+        \item For each batch:
+        \begin{itemize}
+          \item \textbf{Forward}: Compute predictions $\hat{y}_j = f_{\theta}(x_j), j\in[1..m]$
+          \item Computation of the error (loss) $|\hat{y}_j-y_j|, j\in[1..m]$
+          \item \textbf{Backward}: Error gradient retropropagation (model update)
+          \[
+            \theta_i \leftarrow \theta_i - \gamma\frac{\partial{E}}{\partial{\theta_i}}
+          \]
+        \end{itemize}
+      \item Stopping criteria computation
       \end{itemize}
   \end{enumerate}
+
+  Where $k$, $n$, $m$ et $\gamma$ are model's hyperparameters.
 \end{frame}
 
 
 \begin{frame}{Derivation example --- Linear regression}
   \begin{minipage}[l]{0.49\linewidth}
     \begin{align*}
-      E & = \frac{1}{2n} \sum_{i=1}^n( \hat{y_i} - y_i )^2 \\
-      E & = \frac{1}{2n}\sum_{i=1}^n( ax_i + b - y_i )^2 \\
+      E & = \frac{1}{2n} \sum_{i=1}^n( \hat{y}_i - y_i )^2 \\
+      E & = \frac{1}{2n}\sum_{i=1}^n( (\theta_0 + \theta_1 x_i) - y_i )^2 \\
       & ... \\
-      \frac{\partial E}{\partial a} & = \frac{1}{n}\sum^n_{i=1}(ax_i + b - y_i)x_i \\
-      \frac{\partial E}{\partial b} & = \frac{1}{n}\sum^n_{i=1}(ax_i + b - y_i) \\
+      \frac{\partial E}{\partial \theta_0} & = \frac{1}{n}\sum^n_{i=1}(\theta_0 + \theta_1 x_i - y_i) \\
+      \frac{\partial E}{\partial \theta_1} & = \frac{1}{n}\sum^n_{i=1}(\theta_0 + \theta_1 x_i - y_i) x_i \\
     \end{align*}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
     \begin{center}
-      $\boxed{\hat{y_i} = ax_i+b}$
+      $\boxed{\hat{y}_i = \theta_0 + \theta_1 x_i}$
     \end{center}
 
     \begin{center}
@@ -55,99 +67,11 @@
     \begin{center}
       \textbf{Update}
 
-      $a \leftarrow a - \gamma\frac{\partial{E}}{\partial{a}}$ \\
-      $b \leftarrow b - \gamma\frac{\partial{E}}{\partial{b}}$ \\
-      $\;$ \\
+      \begin{align*}
+        \theta_0 & \leftarrow \theta_0 - \gamma\frac{\partial{E}}{\partial{\theta_0}} \\
+        \theta_1 & \leftarrow \theta_1 - \gamma\frac{\partial{E}}{\partial{\theta_1}} \\
+      \end{align*}
       where $0 < \gamma < 1$ (learning rate)
     \end{center}
   \end{minipage}\hfill
-\end{frame}
-
-\begin{frame}{Example}
-  Random initialization ($\gamma = 0.01$)
-  \begin{itemize}
-    \item a = 0.58 ($\text{true}\, a = 3.0$)
-    \item b = 0.25 ($\text{true}\, b = 0.5$)
-  \end{itemize}
-  \V{["img/regression-1", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Example}
-  \begin{itemize}
-    \item a = 0.58 ($\text{true}\, a = 3.0$)
-    \item b = 0.25 ($\text{true}\, b = 0.5$)
-  \end{itemize}
-  \V{["img/regression-error", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Example}
-  \begin{itemize}
-    \item a = 1.50 ($\text{true}\, a = 3.0$)
-    \item b = 0.35 ($\text{true}\, b = 0.5$)
-  \end{itemize}
-  \V{["img/regression-2", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Example}
-  \begin{itemize}
-    \item a = 2.10 ($\text{true}\, a = 3.0$)
-    \item b = 0.40 ($\text{true}\, b = 0.5$)
-  \end{itemize}
-  \V{["img/regression-3", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Example}
-  \begin{itemize}
-    \item a = 2.48 ($\text{true}\, a = 3.0$)
-    \item b = 0.43 ($\text{true}\, b = 0.5$)
-  \end{itemize}
-  \V{["img/regression-4", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Example}
-  \begin{itemize}
-    \item a = 2.73 ($\text{true}\, a = 3.0$)
-    \item b = 0.46 ($\text{true}\, b = 0.5$)
-  \end{itemize}
-  \V{["img/regression-5", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Example}
-  \begin{itemize}
-    \item a = 2.89 ($\text{true}\, a = 3.0$)
-    \item b = 0.47 ($\text{true}\, b = 0.5$)
-  \end{itemize}
-  \V{["img/regression-6", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Example}
-  \begin{itemize}
-    \item a = 2.99 ($\text{true}\, a = 3.0$)
-    \item b = 0.48 ($\text{true}\, b = 0.5$)
-  \end{itemize}
-  \V{["img/regression-7", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Example}
-  \begin{itemize}
-    \item a = 3.06 ($\text{true}\, a = 3.0$)
-    \item b = 0.49 ($\text{true}\, b = 0.5$)
-  \end{itemize}
-  \V{["img/regression-8", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Example}
-  \begin{itemize}
-    \item a = 3.10 ($\text{true}\, a = 3.0$)
-    \item b = 0.49 ($\text{true}\, b = 0.5$)
-  \end{itemize}
-  \V{["img/regression-9", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Example}
-  \begin{itemize}
-    \item a = 3.13 ($\text{true}\, a = 3.0$)
-    \item b = 0.50 ($\text{true}\, b = 0.5$)
-  \end{itemize}
-  \V{["img/regression-10", "th", 0.6] | image}
 \end{frame}
