--- a/shared/latex/en/supervised/classification.tex
+++ b/shared/latex/en/supervised/classification.tex
@@ -7,11 +7,11 @@
 \end{frame}
 
 \begin{frame}{Classification}
-  $\approx$ Distance entre la sortie et la cible ?
+  $\approx$ Distance between the ouput and the target ?
   \newline
   \newline
   \newline
-  \underline{\textbf{Sortie :}}
+  \underline{\textbf{Output:}}
 
   \begin{tabular}{|*{10}{c|}}
     \hline
@@ -20,7 +20,7 @@
   \end{tabular}
   \newline
   \newline
-  \underline{\textbf{Cible :}}
+  \underline{\textbf{Target:}}
 
   \begin{tabular}{|*{10}{c|}}
     \hline
@@ -30,11 +30,11 @@
 \end{frame}
 
 \begin{frame}{Classification}
-  Critère de l'erreur absolue (MAE) = 0.12
+  Mean absolute error $\rightarrow 0.12$
   \newline
   \newline
   \newline
-  \underline{\textbf{Sortie :}}
+  \underline{\textbf{Output:}}
 
   \begin{tabular}{|*{10}{c|}}
     \hline
@@ -43,7 +43,7 @@
   \end{tabular}
   \newline
   \newline
-  \underline{\textbf{Cible :}}
+  \underline{\textbf{Target:}}
 
   \begin{tabular}{|*{10}{c|}}
     \hline
@@ -54,11 +54,11 @@
 
 
 \begin{frame}{Classification}
-  Critère de l'erreur absolue (MAE) = 0.12
+  Mean absolute error $\rightarrow 0.12$
   \newline
   \newline
   \newline
-  \underline{\textbf{Sortie :}}
+  \underline{\textbf{Output:}}
 
   \begin{tabular}{|*{10}{c|}}
     \hline
@@ -67,7 +67,7 @@
   \end{tabular}
   \newline
   \newline
-  \underline{\textbf{Cible :}}
+  \underline{\textbf{Target:}}
 
   \begin{tabular}{|*{10}{c|}}
     \hline
@@ -78,11 +78,11 @@
 
 
 \begin{frame}{Classification}
-  Entropie croisée entre la sortie et la cible :
+  Cross-entropy between output and target:
   \[
     \mathrm{H}(y, \hat{y})=-\sum_{i} y_i \log \hat{y}_i
   \]
 
-  $\Rightarrow$ Minimale quand sortie = cible
+  $\Rightarrow$ Minimal when \texttt{output} = \texttt{target}
     
 \end{frame}
