--- a/shared/latex/en/supervised/cost-error-function.tex
+++ b/shared/latex/en/supervised/cost-error-function.tex
@@ -1,11 +1,11 @@
 \begin{frame}{Cost/error function}
   \begin{minipage}[l]{0.40\linewidth}
-  Mean absolute error
+  \textbf{Mean absolute error}
     \[
       \frac{1}{n}\sum_{i=1}^n \lvert \hat{y_i} - y_i \rvert
     \]
 
-  Mean squared error
+  \textbf{Mean squared error}
     \[
       \frac{1}{n}\sum_{i=1}^n( \hat{y_i} - y_i )^2
     \]
@@ -19,7 +19,7 @@
   \frametitle{Linear regression cost function}
   \begin{minipage}[l]{0.49\linewidth}
     \[
-      \hat{y} = ax + b
+      \hat{y_i} = \theta_0 + \theta_1 x_i
     \]
   \V{["plt/reg-plot-en", "tw", 1] | image}
   \end{minipage}\hfill
