--- a/shared/latex/en/supervised/tp-reg-lin-poly.tex
+++ b/shared/latex/en/supervised/tp-reg-lin-poly.tex
@@ -1,6 +1,6 @@
-\begin{frame}{Travaux pratiques}
+\begin{frame}{Practical exercices}
   \begin{enumerate}
-    \item \bluelink{https://colab.research.google.com/drive/1CAkh09NmO-smYF9h3C5AA_69CZ9d7sTq\#forceEdit=true&sandboxMode=true}{Instructions — régression linéaire}
-    \item \bluelink{https://colab.research.google.com/drive/1kNg2Bc4qBWt1q_SGSmw-zvLNG5FiQJYz\#forceEdit=true&sandboxMode=true}{Instructions – régression polynômiale}
+    \item \bluelink{https://colab.research.google.com/drive/1CAkh09NmO-smYF9h3C5AA_69CZ9d7sTq\#forceEdit=true&sandboxMode=true}{Instructions - linear regression}
+    \item \bluelink{https://colab.research.google.com/drive/1kNg2Bc4qBWt1q_SGSmw-zvLNG5FiQJYz\#forceEdit=true&sandboxMode=true}{Instructions - polynomial regression}
   \end{enumerate}
 \end{frame}
