--- a/shared/latex/nn/gradient-descent.tex
+++ b/shared/latex/nn/gradient-descent.tex
@@ -30,8 +30,8 @@
         \item Échantillonnage des données en batch de $m$ exemples
         \item Pour les $b$ batchs~:
         \begin{itemize}
-          \item \textbf{Forward}~: Calcul des prédictions $\hat{Y_j} = f_{\theta}(X_j), j\in[1..m]$
-          \item Calcul des erreurs $|\hat{Y_j}-Y_j|, j\in[1..m]$
+          \item \textbf{Forward}~: Calcul des prédictions $\hat{y}_j = f_{\theta}(x_j), j\in[1..m]$
+          \item Calcul des erreurs $|\hat{y}_j-y_j|, j\in[1..m]$
           \item \textbf{Backward}~: Mise à jour :
           \[
             \theta_i \leftarrow \theta_i - \gamma\frac{\partial{E}}{\partial{\theta_i}}
@@ -50,7 +50,7 @@
 \begin{frame}{Exemple de dérivation --- Régression linéaire}
   \begin{minipage}[l]{0.49\linewidth}
     \begin{align*}
-      E & = \frac{1}{2n} \sum_{i=1}^n( \hat{y_i} - y_i )^2 \\
+      E & = \frac{1}{2n} \sum_{i=1}^n( \hat{y}_i - y_i )^2 \\
       E & = \frac{1}{2n}\sum_{i=1}^n( (\theta_0 + \theta_1 x_i) - y_i )^2 \\
       & ... \\
       \frac{\partial E}{\partial \theta_0} & = \frac{1}{n}\sum^n_{i=1}(\theta_0 + \theta_1 x_i - y_i) \\
@@ -59,7 +59,7 @@
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
     \begin{center}
-      $\boxed{\hat{y_i} = \theta_0 + \theta_1 x_i}$
+      $\boxed{\hat{y}_i = \theta_0 + \theta_1 x_i}$
     \end{center}
 
     \begin{center}
