--- a/shared/latex/supervised/regression-polynomiale.tex
+++ b/shared/latex/supervised/regression-polynomiale.tex
@@ -25,8 +25,8 @@
 \begin{frame}{Gradient et mise à jour}
   \begin{align*}
     \hat{y}_i & = \sum_{k = 0}^n \theta_k x_i^k \\
-    E & = \frac{1}{2n} \sum_{i=1}^n (\hat{y_i} - y_i)^2 \\
-    \frac{\partial{E}}{\partial{\theta_k}} & = \frac{1}{n} \sum_{i=1}^n (\hat{y_i} - y_i) x_i^k
+    E & = \frac{1}{2n} \sum_{i=1}^n (\hat{y}_i - y_i)^2 \\
+    \frac{\partial{E}}{\partial{\theta_k}} & = \frac{1}{n} \sum_{i=1}^n (\hat{y}_i - y_i) x_i^k
   \end{align*}
 
   Mise à jour, avec $1 > \gamma > 0$ (pas d'apprentissage)~:
